[gd_scene load_steps=12 format=3 uid="uid://bi0ensk61bpv5"]

[ext_resource type="Script" path="res://classes/Character/obj_Character.gd" id="1_22fxh"]
[ext_resource type="Script" path="res://classes/Character/cmp_Character_CameraPivot.gd" id="2_udrru"]
[ext_resource type="Script" path="res://classes/Character/cmp_Character_Footsteps.gd" id="3_iwkfl"]
[ext_resource type="AudioStream" uid="uid://b3jvrhvmrx24q" path="res://assets/sounds/jump_2.wav" id="4_4l5st"]
[ext_resource type="AudioStream" uid="uid://cpl8fru0nfedu" path="res://assets/sounds/land_2.wav" id="5_an4xp"]
[ext_resource type="AudioStream" uid="uid://b63ehaaoi5kbs" path="res://assets/sounds/flashlight_2.wav" id="6_hn3e3"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_bmk0q"]
radius = 0.25
height = 1.0

[sub_resource type="BoxShape3D" id="BoxShape3D_u37tn"]
size = Vector3(0.0412476, 0.0423096, 1.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ifp0i"]
albedo_color = Color(1, 0.352941, 1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_h2a3d"]
material = SubResource("StandardMaterial3D_ifp0i")
size = Vector3(1, 2, 1)

[sub_resource type="BoxMesh" id="BoxMesh_gab2v"]
size = Vector3(0.21, 0.16, 1)

[node name="Character" type="CharacterBody3D"]
collision_layer = 3
wall_min_slide_angle = 0.0
floor_stop_on_slope = false
floor_block_on_wall = false
floor_max_angle = 1.0472
script = ExtResource("1_22fxh")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_bmk0q")

[node name="CameraPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
script = ExtResource("2_udrru")

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]

[node name="UseArea_old" type="Area3D" parent="CameraPivot"]
visible = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="CameraPivot/UseArea_old"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00307007, 0.0288452, -0.734642)
shape = SubResource("BoxShape3D_u37tn")
disabled = true

[node name="UseArea" type="RayCast3D" parent="CameraPivot"]
target_position = Vector3(0, 0, -1.25)
collision_mask = 2

[node name="Flashlight" type="SpotLight3D" parent="CameraPivot"]

[node name="ModelPivot" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="ModelPivot"]
visible = false
mesh = SubResource("BoxMesh_h2a3d")
skeleton = NodePath("../..")

[node name="MeshInstance3D" type="MeshInstance3D" parent="ModelPivot/MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.68696, -0.866925)
visible = false
mesh = SubResource("BoxMesh_gab2v")

[node name="Footsteps" type="Node3D" parent="."]
script = ExtResource("3_iwkfl")

[node name="StepSound" type="AudioStreamPlayer3D" parent="Footsteps"]
pitch_scale = 1.05

[node name="JumpSound" type="AudioStreamPlayer3D" parent="Footsteps"]
stream = ExtResource("4_4l5st")
max_polyphony = 2

[node name="LandSound" type="AudioStreamPlayer3D" parent="Footsteps"]
stream = ExtResource("5_an4xp")
max_polyphony = 2

[node name="Timer" type="Timer" parent="Footsteps"]
process_callback = 0

[node name="FlashlightSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("6_hn3e3")
max_db = 6.0
pitch_scale = 4.0

[connection signal="timeout" from="Footsteps/Timer" to="Footsteps" method="_on_timer_timeout"]
